<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/subblack">
    
    <LinearLayout 
    	android:id="@+id/workout_layout"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:layout_marginRight="5dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginTop="8dp"
    	android:layout_marginBottom="8dp"
    	android:orientation="horizontal" 
    	android:background="@layout/layout_rounded_corners">
    	
            	<ImageView
                	android:id="@+id/btn_main_workout"
                	style="@style/idc_dash_imageview"
                	android:src="@drawable/transition_icon_dumbell">
                </ImageView>
            	
            	<TextView
            	     android:id="@+id/tv_workout"
            	     android:text="@string/text_workouts"
            	     style="@style/home_text_view">
            	</TextView>
            	
    </LinearLayout>
    
    
    <LinearLayout 
        android:id="@+id/schedule_layout"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:layout_marginRight="5dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginTop="8dp"
    	android:layout_marginBottom="8dp"
    	android:orientation="horizontal"
    	android:background="@layout/layout_rounded_corners" >
    
            	<ImageView
                	android:id="@+id/btn_main_schedule"
                    style="@style/idc_dash_imageview"
                    android:src="@drawable/transition_icon_calendar" />
            	
            	<TextView
            	     android:id="@+id/tv_schedule"
            	     android:text="@string/text_schedule"
            	     style="@style/home_text_view">
            	</TextView>
            	
    </LinearLayout>
    
    <LinearLayout 
    	android:id="@+id/recpipe_layout"
    	android:background="@layout/layout_rounded_corners"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:layout_marginRight="5dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginTop="8dp"
    	android:layout_marginBottom="8dp"
    	android:orientation="horizontal" >
    
            	<ImageView
               		android:id="@+id/btn_main_program"
                	style="@style/idc_dash_imageview"
                	android:src="@drawable/transition_icon_program"/>
            	
            	<TextView
            	     android:id="@+id/tv_program"
            	     android:text="@string/text_program"
            	     style="@style/home_text_view">
                </TextView>
            	
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/tip_layout"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:layout_marginRight="5dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginTop="8dp"
    	android:layout_marginBottom="8dp"
    	android:background="@layout/layout_rounded_corners"
    	android:orientation="horizontal" 
    	android:clickable="true">
        
                <ImageView
                	android:id="@+id/btn_main_tip"
                    style="@style/idc_dash_imageview"
                    android:src="@drawable/transition_icon_tip"/>
            	
            	<TextView
            	     android:id="@+id/tv_tip"
            	     android:text="@string/text_health_tips"
            	     style="@style/home_text_view">
            	</TextView>
            	
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/rec_layout"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:layout_marginRight="5dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginTop="8dp"
    	android:layout_marginBottom="8dp"
    	android:background="@layout/layout_rounded_corners"
    	android:orientation="horizontal" 
    	android:clickable="true">
        
               <ImageView
               		android:id="@+id/btn_recipe"
                	style="@style/idc_dash_imageview"
                	android:src="@drawable/transition_icon_recipe"/>
            	
            	<TextView
            	     android:id="@+id/tv_recipe"
            	     style="@style/home_text_view"
            	     android:text="@string/text_recipe">
                </TextView>
        
    </LinearLayout>
    

</LinearLayout>
